// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create a initial extent component with additional css classes 1`] = `
<button
  aria-label="initial-extent.title"
  class="chakra-button chakra-tooltip__trigger tool-button initial-extent testClass1 testClass2 css-1qurmz4"
  data-part="trigger"
  data-scope="tooltip"
  data-state="closed"
  data-testid="initial-extent"
  dir="ltr"
  id="tooltip:«r1»:trigger"
  type="button"
>
  <svg
    aria-hidden="true"
    class="chakra-icon css-1qiwd9j"
    fill="none"
    focusable="false"
    height="1em"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
    <polyline
      points="9 22 9 12 15 12 15 22"
    />
  </svg>
</button>
`;

exports[`should successfully create a initial extent component with home button 1`] = `
<button
  aria-label="initial-extent.title"
  class="chakra-button chakra-tooltip__trigger tool-button initial-extent css-1qurmz4"
  data-part="trigger"
  data-scope="tooltip"
  data-state="closed"
  data-testid="initial-extent"
  dir="ltr"
  id="tooltip:«r0»:trigger"
  type="button"
>
  <svg
    aria-hidden="true"
    class="chakra-icon css-1qiwd9j"
    fill="none"
    focusable="false"
    height="1em"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
    <polyline
      points="9 22 9 12 15 12 15 22"
    />
  </svg>
</button>
`;
